--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="index1.css">
     <title>Document</title>
 </head>
+
 <body>
     <div id="bigPictureContainer">
         <div id="leftArrow">
@@ -18,8 +20,20 @@
         <div id="rightArrow">
             <i class="fa-solid fa-arrow-right"></i>
         </div>
-        
-        <script src="https://kit.fontawesome.com/a0c45339cd.js" crossorigin="anonymous"></script>
+
     </div>
+    <div id="thumbnailContainer">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+        <img src="https://picsum.photos/1000/500" alt="" class="thumbnail">
+    </div>
+    <script src="https://kit.fontawesome.com/a0c45339cd.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
